packages/editor/src/variables.scss
$font-family: Segoe UI;
$font-size-labels: 14px;

input[type=text], select, textarea {
  width: 100%;
  padding: 8px 10px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  font-size: 14px;
}

input[type=text]:focus {
    border: 1px solid #555;
}

.field-label {
    font-size: 14px;
    font-weight: bold;
}

.fql-editor-header {
    display: grid;
    display: -ms-grid;
    grid-template-columns: 1fr 50px; 
    -ms-grid-columns: 1fr 50px;
    height: 80px;
}

.fql-editor-title {
    -ms-grid-column: 1;
    -ms-grid-row: 1;
}
.fql-editor-title-name {
    margin-bottom: 0px;
}
.fql-editor-subtitle {
    margin-top: 3px;
    font-weight: 400;
}

.fql-editor-buttons {
    vertical-align: middle;
    line-height: 90px;
    display: grid;
    display: -ms-grid;
    grid-template-columns: 30px 30px; 
    -ms-grid-columns: 30px 30px;
    -ms-grid-column: 2;
    -ms-grid-row: 1;
}



.fql-logo-save {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24H0z' fill='none' /%3E%3Cpath d='M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z' /%3E%3C/svg%3E");
    width: 23px;
    height: 25px;
    cursor: pointer;
    -ms-grid-column: 1;
    -ms-grid-row: 1;
    margin-top: 27px;
}

.fql-logo-save  {
    fill: rbga(0,0,0,0.9);
}


.fql-logo-close {
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'/%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3C/svg%3E");
    width: 23px;
    height: 25px;
    cursor: pointer;
    -ms-grid-column: 2;
    -ms-grid-row: 1;
    margin-top: 27px;
}

.fql-logo-close svg {
    fill: rbga(0,0,0,0.9);
}

